# DicesServer

./: .gitignore  CMakeLists.txt  main.cpp  pom.xml
ClientAPI/: pom.xml
ClientAPI/src/main/java/to2/ds/api/: Client.java  ClientFactory.java  ClientImpl.java  ClientMessageTuple.java  ClientMock.java  Connector.java  ConnectorImpl.java  Deserializer.java  TargetSerializer.java  UnexistingClientException.java  WrongJSONFormatException.java
ClientAPI/src/to2/ds/api/: Client.java  Connector.java
ControllerAPI/: ClientGroup.java  Observer.java  ObserverImpl.java  ObserverImpl2.java  ObserverThread.java
ControllersContainer/: pom.xml
ControllersContainer/src/main/java/to2/ds/game/controllers/: MockedGameController.java  MockedGameFactory.java  Observer.java  ObserverImpl.java
GameServer/: JNIInstance.cpp  JNIInstance.h  Observer.cpp  Observer.h
JNI-test/: SimpleInstanceJNI.cpp  SimpleInstanceJNI.h
JavaTest/src/: Main.java
Miscellanous/DateTime/: LocalDateTime.cpp  LocalDateTime.h
Miscellanous/DateTime/Date/: LocalDate.cpp  LocalDate.h
Miscellanous/DateTime/Time/: LocalTime.cpp  LocalTime.h
ReceiverSender/: Receiver.cpp  Receiver.h  Sender.cpp  Sender.h
Server/ConnectionServer/ClientServer/: ClientConnector.cpp  ClientConnector.h  ClientHandler.cpp  ClientHandler.h  ClientServer.cpp  ClientServer.h  ConnectionServer.cpp  ConnectionServer.h
Server/ConnectionServer/ClientServer/Client/: Client.cpp  Client.h
Server/ConnectionServer/ClientServer/Client/Serializer/: ClientSerializer.cpp  ClientSerializer.h
Server/ConnectionServer/ClientServer/Deserializer/: Command.cpp  Command.h  MessageHandle.cpp  MessageHandle.h
Server/ConnectionServer/ClientServer/Deserializer/Exception/: ClientMessageException.cpp  ClientMessageException.h  ConnMessageException.cpp  ConnMessageException.h
Server/ConnectionServer/ClientServer/Exception/: ClientNotFoundException.cpp  ClientNotFoundException.h  ConnectorNotFoundException.cpp  ConnectorNotFoundException.h  NameTakenException.cpp  NameTakenException.h
Server/ConnectionServer/ClientServer/Serializer/: ConnectorDeserializer.cpp  ConnectorDeserializer.h  ConnectorResponseSerializer.cpp  ConnectorResponseSerializer.h
Server/ConnectionServer/Connector/Network/: Sender.cpp  Sender.h
Server/GameServer/Event/: RequestQueue.cpp  RequestQueue.h
Server/GameServer/Instance/: GameInstance.cpp  GameInstance.h
Server/GameServer/Instance/Client/: ClientGroup.cpp  ClientGroup.h  ClientMovement.cpp  ClientMovement.h  ClientReader.cpp  ClientReader.h  GameResponseSerializer.cpp  GameResponseSerializer.h
Server/GameServer/Instance/Controller/: GameController.cpp  GameController.h
Server/GameServer/Instance/Observer/: GameCmdSeriallizer.cpp  GameCmdSeriallizer.h  JNIInstance.cpp  JNIInstance.h  ObsCmdDeserializer.cpp  ObsCmdDeserializer.h  Observer.cpp  Observer.h
Server/GameServer/Instance/Reader/: GameCmdDeseriallizer.cpp  GameCmdDeseriallizer.h  GameReader.cpp  GameReader.h
Server/GameServer/Java/Exception/: JNIException.cpp  JNIException.h
Server/GameServer/Java/Exception/Env/: JNIEnvException.cpp  JNIEnvException.h
Server/GameServer/Java/Exception/Loader/: JClassException.cpp  JClassException.h
Server/GameServer/Java/Instance/: JConfig.cpp  JConfig.h  JNIInstance.cpp  JNIInstance.h
Server/GameServer/Java/Object/Controller/: JController.cpp  JController.h
Server/GameServer/Java/Object/Factory/: JFactory.cpp  JFactory.h
Server/GameServer/Java/Object/Observer/: JObserver.cpp  JObserver.h
Server/GameServer/Server/: GameHolder.cpp  GameHolder.h  GameServer.cpp  GameServer.h
Server/GameServer/Server/Client/: ResponseSerializer.cpp  ResponseSerializer.h  WaitingRoom.cpp  WaitingRoom.h
Server/GameServer/Server/Factory/: GameFactory.cpp  GameFactory.h
Server/GameServer/Server/Serializer/: CmdDeseriallizer.cpp  CmdDeseriallizer.h  GamesSerializer.cpp  GamesSerializer.h
Server/Logger/: LogParser.cpp  LogParser.h  Logger.cpp  Logger.h
Server/StartUp/: MainServer.cpp  MainServer.h
